testdata/baselines/reference/submodule/conformance/parserMissingToken2.errors.txt
parserMissingToken2.ts(1,1): error TS1161: Unterminated regular expression literal.
parserMissingToken2.ts(1,5): error TS1161: Unterminated regular expression literal.


==== parserMissingToken2.ts (2 errors) ====
    / b;
    ~~~
!!! error TS1161: Unterminated regular expression literal.
        
!!! error TS1161: Unterminated regular expression literal.